# Robotis_Mini_ROS

./: .gitignore  README.md
3D_Files/: Pi 4B Case Bottom.stl  Pi 4B Case Top-fix-.stl  Pi 4B Case Top.stl  Pi Attachement Piece.stl  README.md
Martin_code/robotis_mini_ros/robotis_mini_control/scripts/: walker.py  walker_demo.py  walker_learner.py
Martin_code/robotis_mini_ros/robotis_mini_control/src/robotis_mini_control/: poppy_node.py
Martin_code/robotis_mini_ros/robotis_mini_description/: CMakeLists.txt
OpenCM9-04_Code/: README.md
OpenCM9-04_Code/Extra Code needed for Arduino IDE/: New Text Document.txt
OpenCM9-04_Code/Extra Code needed for Arduino IDE/dynamixel_workbench_msgs/: AX.h  DynamixelCommandResponse.h  DynamixelInfo.h  DynamixelStateList.h  EX.h  MX2.h  MX2Ext.h  MXExt.h  PRO.h  PROExt.h  RX.h  XH.h  XL.h  XL320.h  XM.h
OpenCM9-04_Code/Extra Code needed for Arduino IDE/robotis_mini_ros/: imu.h  xl320_info.h  xl320_state.h
OpenCM9-04_Code/Extra Code needed for Arduino IDE/ros/: builtin_message_traits.h  message_forward.h  message_operations.h  message_traits.h  shared_array.hpp
OpenCM9-04_Code/Robotis_Mini_ROS_OpenCM904_Code/: Robotis_Mini_ROS_OpenCM904_Code.ino
OpenCM9-04_Code/dynamixel_workbench_msgs/: DynamixelCommandRequest.h  DynamixelLoadInfo.h  DynamixelState.h  GetDynamixelInfoRequest.h  GetDynamixelInfoResponse.h  MX.h  XMExt.h
OpenCM9-04_Code/final_code/: final_code.ino
OpenCM9-04_Code/test_dynamixel2arduino/: test_dynamixel2arduino.ino
OpenCM9-04_Code/test_dynamixelSDK/: test_dynamixelSDK.ino
OpenCM9-04_Code/test_dynamixelWorkbench/: test_dynamixelWorkbench.ino
OpenCM9-04_Code/test_mpu/: test_mpu.ino
images/: README.md
robotis_mini_ros/: CMakeLists.txt  README.md  package.xml
robotis_mini_ros/launch/: mini.launch
robotis_mini_ros/msg/: Xl320Info.msg  Xl320State.msg  imu.msg  xl320_info.msg  xl320_state.msg
robotis_mini_ros/robotis_mini_control/: CMakeLists.txt
robotis_mini_ros/robotis_mini_description/: CMakeLists.txt
robotis_mini_ros/robotis_mini_gazebo/: CMakeLists.txt
robotis_mini_ros/robotis_mini_gazebo/worlds/: empty.world
robotis_mini_ros/src/: base.py  ikpyTest.py  imu_demo.py
